# lemon

./: .gitignore  MODULE.bazel  README.md  WORKSPACE.bazel
parser/: BUILD.bazel
rules/: lemon.bzl
src/: BUILD.bazel  BUILD.bzl
trace/: BUILD.bazel
